<resources>
    <string name="app_name">OSOL MVC Android</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="signout">Sign out</string>
    <string name="close">Close</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="google_login_web_client_id"></string>
    <string name="action_google_login">Google Login</string>

    <string name="facebook_app_id"></string>
    <string name="fb_login_protocol_scheme"></string>
    <string name="facebook_client_token"></string>
</resources>