<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">



    <!-- place btnGoogleSignIn in center of screen, use it as anchor for positioning other elements-->
    <!-- for more on gravity https://learntodroid.com/what-is-the-difference-between-gravity-and-layout_gravity-in-android/ -->
    <!-- layout_gravity is used to arrange the position of the entire View relative to it’s container -->
    <!-- gravity attribute is used to arrange the position of the content inside a view (for example text content inside a Textbox-->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity ="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnFacebookSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/txtGoogleLoggedInUser"
        android:layout_width="300sp"
        android:layout_height="24dp"
        android:text=""
        android:textSize="20sp"
        android:layout_gravity ="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoogleSignIn" />



    <Button
        android:id="@+id/btnGoogleSignOut"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:text="@string/signout"
        android:layout_gravity ="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnGoogleSignIn"
        app:layout_constraintBottom_toBottomOf="parent" />


    <Button
        android:id="@+id/btnCloseGoogleLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_gravity ="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnGoogleSignOut"
        app:layout_constraintBottom_toBottomOf="parent" />


    <!-- controlls in original fragment layout-->
    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        android:visibility="gone"
        />
    <!-- controlls in original fragment layout ends here-->
</androidx.constraintlayout.widget.ConstraintLayout>